--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,9 @@ torch-tb-profiler>=0.4.0
 # Raspberry Pi specific
 picamera2>=0.3.12
 adafruit-circuitpython-ina219>=3.4.0
+# HuggingFace integration
+huggingface-hub>=0.19.0
+tokenizers>=0.15.0
+# Enhanced visualization
+plotly>=5.17.0
+kaleido>=0.2.1
