--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,48 @@
-torch>=2.0.0
-torchvision>=0.15.0
-transformers>=4.35.0
-accelerate>=0.24.0
-datasets>=2.14.0
-Pillow>=10.0.0
-numpy>=1.24.0
-scipy>=1.10.0
-einops>=0.7.0
-timm>=0.9.0
-safetensors>=0.4.0
-kaggle>=1.5.0
-opencv-python>=4.8.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-wandb>=0.15.0
-tqdm>=4.65.0
-psutil>=5.9.0
-memory-profiler>=0.61.0
-bitarray>=2.8.0
-numba>=0.58.0
-cython>=3.0.0
-pybind11>=2.11.0
+torch
+torchvision
+transformers
+accelerate
+datasets
+Pillow
+numpy
+scipy
+einops
+timm
+safetensors
+kaggle
+opencv-python
+matplotlib
+seaborn
+wandb
+tqdm
+psutil
+memory-profiler
+bitarray
+numba
+cython
+pybind11
 # Monitoring and profiling for Raspberry Pi Zero
-codecarbon>=2.3.0
-py-cpuinfo>=9.0.0
-GPUtil>=1.4.0
-nvidia-ml-py>=12.535.133
-pynvml>=11.5.0
+codecarbon
+py-cpuinfo
+GPUtil
+nvidia-ml-py
+pynvml
 # Power monitoring for Raspberry Pi
-RPi.GPIO>=0.7.1
-gpiozero>=1.6.2
-w1thermsensor>=2.0.0
+RPi.GPIO
+gpiozero
+w1thermsensor
 # Performance monitoring
-ptflops>=0.6.9
-fvcore>=0.1.5
-thop>=0.1.1
-pycuda>=2022.2.2
-torch-tb-profiler>=0.4.0
+ptflops
+fvcore
+thop
+pycuda
+torch-tb-profiler
 # Raspberry Pi specific
-picamera2>=0.3.12
-adafruit-circuitpython-ina219>=3.4.0
+picamera2
+adafruit-circuitpython-ina219
 # HuggingFace integration
-huggingface-hub>=0.19.0
-tokenizers>=0.15.0
+huggingface-hub
+tokenizers
 # Enhanced visualization
-plotly>=5.17.0
-kaleido>=0.2.1
+plotly
+kaleido
